// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PromptEstablishingConnectionFailedStep renders with device 1`] = `
<AndroidSetupStepLayout
  headerText="Establishing connection failed"
  leftFooterButtonProps={
    {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/establishingConnection"
    >
      Troubleshooting guidance
    </LinkComponent>
  }
  rightFooterButtonProps={
    {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    We were unable to connect to the Accessibility Insights for Android Service on your device. Please reconnect your device and try again.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      {
        "friendlyName": "Super-Duper Gadget",
        "id": "1",
        "isEmulator": false,
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;

exports[`PromptEstablishingConnectionFailedStep renders with emulator 1`] = `
<AndroidSetupStepLayout
  headerText="Establishing connection failed"
  leftFooterButtonProps={
    {
      "onClick": [Function],
      "text": "Cancel",
    }
  }
  moreInfoLink={
    <LinkComponent
      href="https://aka.ms/accessibility-insights-for-android/establishingConnection"
    >
      Troubleshooting guidance
    </LinkComponent>
  }
  rightFooterButtonProps={
    {
      "disabled": true,
      "onClick": undefined,
      "text": "Next",
    }
  }
>
  <p>
    We were unable to connect to the Accessibility Insights for Android Service on your device. Please reconnect your device and try again.
  </p>
  <DeviceDescription
    className="deviceDescription"
    deviceInfo={
      {
        "friendlyName": "Emulator Extraordinaire",
        "id": "1",
        "isEmulator": true,
      }
    }
  />
  <CustomizedPrimaryButton
    data-automation-id="try-again"
    onClick={[Function]}
    text="Try again"
  />
</AndroidSetupStepLayout>
`;
